# gh-actions-test

./: .editorconfig  .gitignore  Taskfile.yml  VERSION
.github/actions/changes/: action.yml
.github/actions/commons/comment/: action.yml
.github/actions/commons/docker_build/: action.yml
.github/actions/commons/ecr_clear_force/: action.yml
.github/actions/context_to_main/: action.yml
.github/actions/context_to_release/: action.yml
.github/actions/get-sha/: action.yml
.github/actions/transactions/: README.md
.github/workflows/: common-check.yml  common-merge.yml  preview-account-deploy.yml  preview-account-destroy.yml  preview-log-deploy.yml  preview-log-destroy.yml  release-account-check.yml  release-account-deploy.yml  release-log-build.yml  release-log-check.yml  release-log-deploy.yml  unused-image-delete.yml
account/: Dockerfile
account/backend/: pyproject.toml
account/frontend/: package.json
account/frontend/src/: main.tsx
log/: Dockerfile  docker-compose-test.yml  docker-compose.yml  pyproject.toml  startup.bat
log/backend/: startup.bat
log/backend/lambroll/: A01.json  A02.json  A03.json  prod.env
log/backend/src/: handler.py
log/backend/tests/: conftest.py
service/: VERSION
service/backend/lambroll/: dev.env  webapp.json
service/backend/src/: handler.py
service/backend/tests/: conftest.py  test_handler.py
service/frontend/: package-lock.json  package.json  vite.config.ts
service/frontend/src/: App.tsx  main.tsx
service/frontend/tests/: add.test.ts
terraform/: .terraform.lock.hcl  backend.cf.yml  main.tf
(+38 files in other folders)
